--- a/tenzies/index.css
+++ b/tenzies/index.css
@@ -1,15 +1,74 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    background-color: #0B2434;
-    padding: 20px;
+h1 {
+    font-size: 3.2em;
+    line-height: 1.1;
 }
 
 main {
-    background-color: #F5F5F5;
-    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+
+    width: 100%;
+    height: 100%;
+
     border-radius: 5px;
+    border: 1px dashed black;
+
+}
+
+.dieContainer {
+    display: flex;
+    justify-content: space-between;
+
+    align-items:center;
+    margin: 1em 0;
+
+    width: 100%;
+    max-width: 800px;
+
+    border-radius: 5px;
+    border: 1px dashed black;
+
+}
+
+.die {
+    display: flex;
+
+    padding: 0.6em 1.2em;
+
+    font-size: 1.5em;
+    font-weight: 500;
+    font-family: inherit;
+
+    border-radius: 5px;
+    border: 5px solid whitesmoke;
+    background-color: whitesmoke;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+    transition: border-color 0.25s;
+}
+
+
+
+button:hover {
+    border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (prefers-color-scheme: light) {
+    :root {
+        color: #213547;
+        background-color: #ffffff;
+    }
+    a:hover {
+        color: #747bff;
+    }
+    button {
+        background-color: #f9f9f9;
+    }
 }
