--- a/tenzies/index.css
+++ b/tenzies/index.css
@@ -13,30 +13,39 @@ main {
     width: 100%;
     height: 100%;
 
-    border-radius: 5px;
-    border: 1px dashed black;
-
+    'border-radius: 5px;
+    'border: 1px dashed black;
 }
 
-.dieContainer {
-    display: flex;
-    justify-content: space-between;
+.dieContainerRow {
+    display: grid;
+    grid-template-columns: 150px 150px 150px 150px 150px;
+    grid-template-rows: auto;
+    row-gap: 40px;
 
-    align-items:center;
-    margin: 1em 0;
+    'justify-content: space-between;
+
+    'align-items:center;
+    'margin: 1em 0;
 
     width: 100%;
     max-width: 800px;
 
-    border-radius: 5px;
-    border: 1px dashed black;
+    'border-radius: 5px;
+    'border: 1px dashed black;
 
 }
 
 .die {
-    display: flex;
 
-    padding: 0.6em 1.2em;
+    width: 50px;
+
+    justify-self: center;
+
+    text-align: center;
+
+    min-width: 80px;
+    min-height: 80px;
 
     font-size: 1.5em;
     font-weight: 500;
@@ -50,6 +59,10 @@ main {
     transition: border-color 0.25s;
 }
 
+.die-disabled {
+    border-color: #f9f9f9;
+    background-color: #f9f9f9;
+}
 
 
 button:hover {
