--- a/tenzies/index.css
+++ b/tenzies/index.css
@@ -36,6 +36,30 @@ main {
 
 }
 
+.control-button {
+
+    width: 120px;
+    height: 50px;
+
+    justify-self: center;
+
+    text-align: center;
+
+    font-size: 1.5em;
+    font-weight: 500;
+    font-family: inherit;
+
+    margin: 50px 40px;
+
+    border-radius: 5px;
+    border: 5px solid cornflowerblue;
+    background-color: cornflowerblue;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+    transition: border-color 0.25s;
+
+}
+
 .die {
 
     width: 50px;
@@ -60,13 +84,31 @@ main {
 }
 
 .die-disabled {
-    border-color: #f9f9f9;
-    background-color: #f9f9f9;
+
+    width: 50px;
+
+    justify-self: center;
+
+    text-align: center;
+
+    min-width: 80px;
+    min-height: 80px;
+
+    font-size: 1.5em;
+    font-weight: 500;
+    font-family: inherit;
+
+    border-radius: 5px;
+    border: 5px solid darkslateblue;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+    transition: border-color 0.25s;
+    background-color: darkslateblue;
 }
 
 
 button:hover {
-    border-color: #646cff;
+    border-color: darkslateblue;
 }
 button:focus,
 button:focus-visible {
