--- a/searchengine/src/SearchEngine.css
+++ b/searchengine/src/SearchEngine.css
@@ -1,10 +1,29 @@
 .app{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
     align-items: center;
     width: 100vw;
     height: 100vh;
+}
+
+.quicklinks {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding-left: 30px;
+    min-width: 20px;
+    margin-bottom: 20px;
+    height: 100%;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    height: 100%;
+    width: 100%;
 }
 
 .search-form-header {
@@ -48,20 +67,19 @@
     align-self: end;
     width: 40px; /* Set width */
     height: 40px; /* Set height */
-    background-size: 25px; /* Set the size of the icon */
+    background-size: 40px; /* Set the size of the icon */
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url('./assets/up-loading.png');
+    background-image: url('./assets/upload.png');
     border: none;
     border-radius: 50%; /* Make the button round */
     cursor: pointer;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    opacity: 0.8;
+    opacity: 0.6;
 }
 
 .search-button:hover {
-    background: rgba(0, 0, 0, 0.1); /* Smokescreen effect */
-    opacity: 1; /* Fully opaque on hover */
+    opacity: 0.9; /* Fully opaque on hover */
 }
 
 .search-results {
